--- a/lab02/notebook_01_psycopg.ipynb
+++ b/lab02/notebook_01_psycopg.ipynb
@@ -32,12 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ea898094-1ff8-45be-b564-46ad3b9d07d3",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "host=localhost user=postgres password=postgres dbname=postgres\n"
+     ]
+    }
+   ],
    "source": [
     "import psycopg\n",
     "\n",
@@ -53,10 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4a0fb2dd-e745-4cb3-9206-9d24afec820a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total trains: (404915,)\n",
+      "Late trains:\n",
+      "(12690865, datetime.date(2024, 1, 1), 'Intercity', 'NS', 1410, False, False, 0, 114307598, 'ASD', 'Amsterdam Centraal', datetime.datetime(2024, 1, 1, 3, 18), 1, False, datetime.datetime(2024, 1, 1, 3, 20), 2, False, False, '4', '4')\n",
+      "(12690867, datetime.date(2024, 1, 1), 'Intercity', 'NS', 1409, False, False, 0, 114307612, 'ASD', 'Amsterdam Centraal', datetime.datetime(2024, 1, 1, 2, 44), 4, False, datetime.datetime(2024, 1, 1, 2, 46), 8, False, True, '5', '7')\n",
+      "(12690870, datetime.date(2024, 1, 1), 'Intercity', 'NS', 1414, False, False, 0, 114307633, 'ASD', 'Amsterdam Centraal', datetime.datetime(2024, 1, 1, 4, 17), 3, False, datetime.datetime(2024, 1, 1, 4, 19), 4, False, False, '4', '4')\n"
+     ]
+    }
+   ],
    "source": [
     "query_total_trains = \"\"\"\n",
     "SELECT COUNT(*)\n",
@@ -115,10 +135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9a1eedc1-6868-4342-81e5-2dbb39b34b52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Service:RDT-ID', 'Service:Date', 'Service:Type', 'Service:Company', 'Service:Train number', 'Service:Completely cancelled', 'Service:Partly cancelled', 'Service:Maximum delay', 'Stop:RDT-ID', 'Stop:Station code', 'Stop:Station name', 'Stop:Arrival time', 'Stop:Arrival delay', 'Stop:Arrival cancelled', 'Stop:Departure time', 'Stop:Departure delay', 'Stop:Departure cancelled', 'Stop:Platform change', 'Stop:Planned platform', 'Stop:Actual platform']\n"
+     ]
+    }
+   ],
    "source": [
     "with psycopg.connect(db_conn_string) as conn:\n",
     "    with conn.cursor() as cur:\n",
@@ -150,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ad5c9e66-846d-4a34-b2ab-25c388232448",
    "metadata": {},
    "outputs": [],
@@ -168,18 +196,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ea22cee1-ba3b-409c-8cd1-41e701441a5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution ..."
+    "# Your solution ...\n",
+    "from psycopg.rows import dict_row\n",
+    "\n",
+    "query_late_train = \"\"\"\n",
+    "SELECT * \n",
+    "FROM services \n",
+    "WHERE \"Stop:Arrival delay\" > 0 AND \"Stop:Arrival delay\" > 0\n",
+    "\"\"\"\n",
+    "\n",
+    "with psycopg.connect(db_conn_string) as conn:\n",
+    "    with conn.cursor(row_factory=dict_row) as cur:\n",
+    "        cur.execute(query_late_train)\n",
+    "        late_trains = cur.fetchall()\n",
+    "\n",
+    "\n",
+    "with open(\"data/late_train.jsonl\", \"w\") as file:\n",
+    "    for entry in late_trains:\n",
+    "        json.dump(entry, file, cls=DateEncoder)\n",
+    "        file.write(\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "143c9ca7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mlops-course-agh-lab-02",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
