--- a/lab02/notebook_01_psycopg.ipynb
+++ b/lab02/notebook_01_psycopg.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ea22cee1-ba3b-409c-8cd1-41e701441a5b",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
     "query_late_train = \"\"\"\n",
     "SELECT * \n",
     "FROM services \n",
-    "WHERE \"Stop:Arrival delay\" > 0 AND \"Stop:Arrival delay\" > 0\n",
+    "WHERE \"Stop:Arrival delay\" > 0 AND \"Stop:Departure delay\" > 0\n",
     "\"\"\"\n",
     "\n",
     "with psycopg.connect(db_conn_string) as conn:\n",
