--- a/lab07/LAB.ipynb
+++ b/lab07/LAB.ipynb
@@ -890,7 +890,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "lab07",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -903,7 +904,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
