--- a/lab07/LAB.ipynb
+++ b/lab07/LAB.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e0eef521",
    "metadata": {
     "colab": {
@@ -864,22 +864,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "gp3s6ncwqrdi",
    "metadata": {
     "id": "gp3s6ncwqrdi"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import torch.onnx\n",
+    "\n",
+    "# Put the model in eval mode and move to CPU\n",
+    "model_cpu = model.eval().cpu()\n",
+    "\n",
+    "# Example input for tracking (for onnx export)\n",
+    "sample_input = tokenizer(\n",
+    "    \"This is a sample input text for ONNX export.\",\n",
+    "    padding=True,\n",
+    "    truncation=True,\n",
+    "    return_tensors=\"pt\",\n",
+    ")\n",
+    "\n",
+    "# Export to ONNX format\n",
+    "torch.onnx.export(\n",
+    "    model_cpu,\n",
+    "    (sample_input[\"input_ids\"], sample_input[\"attention_mask\"]),\n",
+    "    \"model.onnx\",\n",
+    "    opset_version=17,\n",
+    "    input_names=[\"input_ids\", \"attention_mask\"],\n",
+    "    output_names=[\"output\"],\n",
+    "    dynamic_axes={\n",
+    "        \"input_ids\": {0: \"batch_size\", 1: \"sequence_length\"},\n",
+    "        \"attention_mask\": {0: \"batch_size\", 1: \"sequence_length\"},\n",
+    "        \"output\": {0: \"batch_size\"},\n",
+    "    },\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a504652",
+   "metadata": {},
+   "source": [
+    "* online mode"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "b2aCapb_qsjF",
    "metadata": {
     "id": "b2aCapb_qsjF"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cold Start Time: 344.02 ms\n",
+      "Inference Time:  14.17 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import onnxruntime as ort\n",
+    "\n",
+    "# Prepare input data\n",
+    "sample_input = tokenizer(\n",
+    "    \"This is a sample input text for ONNX inference.\",\n",
+    "    padding=True,\n",
+    "    truncation=True,\n",
+    "    return_tensors=\"np\",\n",
+    ")\n",
+    "\n",
+    "# Create input dictionary, in same format as during export\n",
+    "inputs_onnx = {\n",
+    "    \"input_ids\": sample_input[\"input_ids\"],\n",
+    "    \"attention_mask\": sample_input[\"attention_mask\"],\n",
+    "}\n",
+    "\n",
+    "t = time.perf_counter()\n",
+    "\n",
+    "options = ort.SessionOptions()\n",
+    "options.graph_optimization_level = ort.GraphOptimizationLevel.ORT_ENABLE_ALL\n",
+    "ort_session = ort.InferenceSession(\"model.onnx\", sess_options=options, providers=[\"CPUExecutionProvider\"])\n",
+    "\n",
+    "cold_start_time = time.perf_counter() - t\n",
+    "print(f\"Cold Start Time: {cold_start_time * 1000:.2f} ms\")\n",
+    "\n",
+    "t = time.perf_counter()\n",
+    "_ = ort_session.run(None, inputs_onnx)\n",
+    "inference_time = time.perf_counter() - t\n",
+    "print(f\"Inference Time:  {inference_time * 1000:.2f} ms\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8683a793",
+   "metadata": {},
+   "source": [
+    "* offline mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c574eebf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cold Start Time: 265.93 ms\n",
+      "Inference Time:  14.06 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "opt_options = ort.SessionOptions()\n",
+    "opt_options.graph_optimization_level = ort.GraphOptimizationLevel.ORT_ENABLE_EXTENDED\n",
+    "opt_options.optimized_model_filepath = \"model_optimized.onnx\"\n",
+    "ort.InferenceSession(\"model.onnx\", sess_options=opt_options, providers=[\"CPUExecutionProvider\"])\n",
+    "\n",
+    "t = time.perf_counter()\n",
+    "\n",
+    "options = ort.SessionOptions()\n",
+    "options.graph_optimization_level = ort.GraphOptimizationLevel.ORT_DISABLE_ALL\n",
+    "session = ort.InferenceSession(\"model_optimized.onnx\", sess_options=options, providers=[\"CPUExecutionProvider\"])\n",
+    "\n",
+    "cold_start_time = time.perf_counter() - t\n",
+    "print(f\"Cold Start Time: {cold_start_time * 1000:.2f} ms\")\n",
+    "\n",
+    "t = time.perf_counter()\n",
+    "_ = session.run(None, inputs_onnx)\n",
+    "inference_time = time.perf_counter() - t\n",
+    "print(f\"Inference Time:  {inference_time * 1000:.2f} ms\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "595ed9c8",
+   "metadata": {},
    "source": []
   }
  ],
