--- a/lab07/lab/LAB.ipynb
+++ b/lab07/lab/LAB.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e0eef521",
    "metadata": {
     "colab": {
@@ -1017,7 +1017,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "lab07",
+   "display_name": "mlops-course-agh-lab-07",
    "language": "python",
    "name": "python3"
   },
@@ -1031,7 +1031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
