--- a/lab07/lab/LAB.ipynb
+++ b/lab07/lab/LAB.ipynb
@@ -1004,6 +1004,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f784b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import requests\n",
+    "import numpy as np\n",
+    "from tqdm import trange\n",
+    "\n",
+    "\n",
+    "def benchmark_endpoint(name, url, payload, n=100):\n",
+    "    latencies = []\n",
+    "    requests.post(url, json=payload)\n",
+    "\n",
+    "    for _ in trange(n, desc=f\"Benchmarking {name}...\"):\n",
+    "        t = time.perf_counter()\n",
+    "        requests.post(url, json=payload)\n",
+    "        t = time.perf_counter() - t\n",
+    "        latencies.append(t * 1000)\n",
+    "\n",
+    "    print(f\"{name} Avg Response Time: {np.mean(latencies):.2f} ms\")\n",
+    "\n",
+    "\n",
+    "payload = {\"text\": \"Some text...\"}\n",
+    "benchmark_endpoint(\"ONNX Runtime\", \"http://localhost:8000/predict\", payload)\n",
+    "benchmark_endpoint(\"PyTorch CPU\", \"http://localhost:8001/predict\", payload)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "595ed9c8",
    "metadata": {},
