--- a/lab07/lab/LAB.ipynb
+++ b/lab07/lab/LAB.ipynb
@@ -564,6 +564,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3606f57f",
+   "metadata": {},
+   "source": [
+    "Quantization greatly reduces the model size (~2x) but only slightly speeds-up\n",
+    "the inference. It is definietly worth it, though."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8942750a",
    "metadata": {
     "id": "8942750a"
@@ -843,6 +852,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2529de2f",
+   "metadata": {},
+   "source": [
+    "Torch autocast seems like the best option, it is both the fastest and easies to\n",
+    "use (just add the context manager)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6QVtAcAYqlqY",
    "metadata": {
     "id": "6QVtAcAYqlqY"
@@ -1005,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8f784b8c",
    "metadata": {},
    "outputs": [],
@@ -1026,19 +1044,95 @@
     "        t = time.perf_counter() - t\n",
     "        latencies.append(t * 1000)\n",
     "\n",
-    "    print(f\"{name} Avg Response Time: {np.mean(latencies):.2f} ms\")\n",
+    "    print(f\"{name} Avg Response Time: {np.mean(latencies):.2f} ms ({n} runs)\")\n",
     "\n",
     "\n",
-    "payload = {\"text\": \"Some text...\"}\n",
-    "benchmark_endpoint(\"ONNX Runtime\", \"http://localhost:8000/predict\", payload)\n",
-    "benchmark_endpoint(\"PyTorch CPU\", \"http://localhost:8001/predict\", payload)"
+    "payload = {\"text\": \"Some text...\"}"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "595ed9c8",
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a7ff8ae5",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTAINER ID   IMAGE                 COMMAND                  CREATED          STATUS          PORTS                                         NAMES                   SIZE\n",
+      "b642eaa573e6   torch_app-torch-app   \"uv run uvicorn main…\"   3 minutes ago    Up 3 minutes    0.0.0.0:8001->8001/tcp, [::]:8001->8001/tcp   torch_app-torch-app-1   641MB (virtual 2.25GB)\n",
+      "6b4ffff7553c   onnx_app-onnx-app     \"uv run uvicorn main…\"   20 minutes ago   Up 20 minutes   0.0.0.0:8000->8000/tcp, [::]:8000->8000/tcp   onnx_app-onnx-app-1     17.7MB (virtual 896MB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!docker ps --size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1c870fff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Benchmarking ONNX Runtime...: 100%|██████████| 100/100 [00:01<00:00, 59.73it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ONNX Runtime Avg Response Time: 16.64 ms (100 runs)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "benchmark_endpoint(\"ONNX Runtime\", \"http://localhost:8000/predict\", payload)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e0b1f109",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Benchmarking PyTorch CPU...: 100%|██████████| 100/100 [00:18<00:00,  5.32it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch CPU Avg Response Time: 187.15 ms (100 runs)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "benchmark_endpoint(\"PyTorch CPU\", \"http://localhost:8001/predict\", payload)"
+   ]
   }
  ],
  "metadata": {
